@@ -1,2 +1,3 @@
 /Alien-nasm-*
 /.build
+*.swp
