@@ -7,6 +7,7 @@ addons:
       - nasm
 
 install:
+  - ./maint/travis-install-alienbuild
   - perlbrew list
   - dzil authordeps --missing | cpanm -n
   - dzil listdeps --missing | cpanm -n
