@@ -6,20 +6,20 @@ copyright_year   = 2017
 version          = 0.11
 
 [@Author::Plicease]
-:version      = 2.10
+:version      = 2.11
 travis_status = 1
 release_tests = 1
-installer     = Alien
+installer     = Author::Plicease::MakeMaker
 irc           = irc://irc.perl.org/#native
 
-alien_name            = nasm
-alien_stage_install   = 1
-alien_build_command   = %c --prefix=%s
-alien_build_command   = %{gmake}
-alien_install_command = %{gmake} install
-alien_repo            = http://www.nasm.us/pub/nasm/releasebuilds/2.11.08/
-alien_exact_filename  = nasm-2.11.08.tar.gz
-alien_bin_requires    = Alien::gmake = 0.11
+diag_preamble = | $post_diag = sub {
+diag_preamble = |   require Alien::nasm;
+diag_preamble = |   diag "version       = ", Alien::nasm->version;
+diag_preamble = |   diag "bin_dir       = ", $_ for Alien::nasm->bin_dir;
+diag_preamble = |   diag "dist_dir      = ", Alien::nasm->dist_dir;
+diag_preamble = | };
+
+[AlienBuild]
 
 [RemovePrereqs]
 remove = strict
