@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - migrate from Alien::Base::ModuleBuild to Alien::Build
 
 0.11      2017-01-12 22:40:51 -0500
   - implicit modification of PATH is now deprecated
